--- a/src/main/webapp/views/cards.html
+++ b/src/main/webapp/views/cards.html
@@ -1,6 +1,6 @@
-<h3>The Bride</h3>
+<h3>Wedding Cards</h3>
 <div class="row">
-	<div class="col-md-6">
+	<div class="col-md-12">
 	  <div>
 	    <carousel interval="myInterval">
 	      <slide ng-repeat="slide in slides" active="slide.active">
