--- a/src/main/webapp/views/guestbook.html
+++ b/src/main/webapp/views/guestbook.html
@@ -1,5 +1,6 @@
 <h3>Guest Book</h3>
+<p class="guestbook-heading">We thought this book would make a great souvenir, so if you have a wedding message, please add it in here. We could surely use your advice and good wishes.</p>
 <hr/>
 <a ui-sref=".add" class="pull-right">Add a message</a>
 <div class="group"></div>
-<div ui-view></div>
+<div ui-view ui-view autoscroll='false'></div>
