--- a/src/main/webapp/views/venue.html
+++ b/src/main/webapp/views/venue.html
@@ -1,10 +1,10 @@
 <h3>Venue Information</h3>
-<h4>Wedding, Sunday, March 23rd 2014, 3:01 am</h4>
+<h4><strong>Wedding</strong>, Sunday, March 24th 2014, 3:01 am</h4>
 <p>Sai Gardens, Sai Kalyanamandapam A/c., Function Hall No. IV,<br/>Habsiguda. NFC Main Road, Mallapur, Hyerdabad-500076.</p>
 <div id="map-canvas">
 </div>
 <hr/>
-<h4>Reception, Thursday, March 27th 2014, 7:00 pm</h4>
+<h4><strong>Reception</strong>, Thursday, March 27th 2014, 7:00 pm</h4>
 <p>Sri Tirupati Naidu A/c., Kalyanamandapam, G.N.T. Road,<br/>Opp. Govt. District Head Quarters Hospital, Nellore</p>
 <div id="map-canvas2">
 </div>
