--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -16,58 +16,13 @@ html {
   filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='.myBackground.jpg', sizingMethod='scale');
   -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='myBackground.jpg', sizingMethod='scale')";
 }
-
-body {
-  padding-top: 20px;
-  background-color: transparent;
-}
-footer {
-  padding: 30px 0;
-}
-
 /*
- * Off Canvas
+ * Fixed nav
  * --------------------------------------------------
  */
-@media screen and (max-width: 767px) {
-  .row-offcanvas {
-    position: relative;
-    -webkit-transition: all .25s ease-out;
-       -moz-transition: all .25s ease-out;
-            transition: all .25s ease-out;
-  }
-
-  .row-offcanvas-right {
-    right: 0;
-  }
-
-  .row-offcanvas-left {
-    left: 0;
-  }
-
-  .row-offcanvas-right
-  .sidebar-offcanvas {
-    right: -50%; /* 6 columns */
-  }
-
-  .row-offcanvas-left
-  .sidebar-offcanvas {
-    left: -50%; /* 6 columns */
-  }
-
-  .row-offcanvas-right.active {
-    right: 50%; /* 6 columns */
-  }
-
-  .row-offcanvas-left.active {
-    left: 50%; /* 6 columns */
-  }
-
-  .sidebar-offcanvas {
-    position: absolute;
-    top: 0;
-    width: 50%; /* 6 columns */
-  }
+body {
+  background-color: transparent;
+  font-family: 'Flamenco', cursive; 
 }
 
 /*global styles*/
@@ -76,12 +31,58 @@ footer {
   display: table;
   clear: both;
 }
+hr {
+	margin: 10px 0px;
+}
 
 /*home styles*/
 
-.header {font-family: 'Flamenco', cursive; font-size: 22px; color: #FFF;}
+.navbar {
+	background-color: transparent;
+	border: none;
+	font-size: 18px;
+}
+.navbar .navbar-nav {
+  display: inline-block;
+  float: none;
+}
+
+.navbar .navbar-collapse {
+  text-align: center;
+}
+.navbar-default .navbar-nav > li > a {
+  color: #fff;
+  background-color: transparent;
+}
+.navbar-default .navbar-nav > li > a:hover,
+.navbar-default .navbar-nav > li > a:focus {
+  color: #fff;
+  background-color: transparent;
+}
+.navbar-default .navbar-nav > .active > a,
+.navbar-default .navbar-nav > .active > a:hover,
+.navbar-default .navbar-nav > .active > a:focus {
+  color: #fff;
+  background-color: transparent;
+  outline-style: none;
+}
+.navbar-default .navbar-nav > li.active,
+.navbar-default .navbar-nav > li.active:hover,
+.navbar-default .navbar-nav > li.active:focus {
+  color: #fff;
+  background-color: transparent;
+  border-bottom: 1px solid #fff;
+  outline-style: none;
+}
+
+.header {font-size: 22px; color: #FFF; border-bottom: none;}
 .header h1 {font-size: 55px;}
 
 /*Venue styles*/
 #map-canvas { height: 400px; }
 #map-canvas2 { height: 400px; }
+
+/*GuestBook styles*/
+.guestbook-heading {
+	font-size: 18px;
+}
