--- a/src/main/webapp/views/groom.html
+++ b/src/main/webapp/views/groom.html
@@ -1,4 +1,13 @@
-<h1>Route 2</h1>
+<h3>The Groom</h3>
+<div class="row">
+	<div class="col-md-6">
+	  <div>
+	    <carousel interval="myInterval">
+	      <slide ng-repeat="slide in slides" active="slide.active">
+	        <img ng-src="{{slide.image}}" style="margin:auto;">
+	      </slide>
+	    </carousel>
+	  </div>
+	</div>
+</div>
 <hr/>
-<a ui-sref=".list">Show List</a>
-<div ui-view></div>
