--- a/src/main/webapp/views/bride.html
+++ b/src/main/webapp/views/bride.html
@@ -1,13 +1,17 @@
 <h3>The Bride</h3>
 <div class="row">
-	<div class="col-md-6">
-	  <div>
-	    <carousel interval="myInterval">
-	      <slide ng-repeat="slide in slides" active="slide.active">
-	        <img ng-src="{{slide.image}}" style="margin:auto;">
-	      </slide>
-	    </carousel>
-	  </div>
+	<div class="col-md-12">
+		<div class="col-md-6">
+		    <carousel interval="myInterval">
+		      <slide ng-repeat="slide in slides" active="slide.active">
+		        <img ng-src="{{slide.image}}" style="margin:auto;">
+		      </slide>
+		    </carousel>
+		</div>
+		<p>
+		<b>Born: April 17<sup>th</sup> ( Narayanaguda, Hyderabad )</b>
+		I was born to Krishna and Ratnaveni
+		</p>
 	</div>
 </div>
 <hr/>
