--- a/src/main/webapp/views/bride.html
+++ b/src/main/webapp/views/bride.html
@@ -8,10 +8,10 @@
 		      </slide>
 		    </carousel>
 		</div>
-		<p>
-		<b>Born: April 17<sup>th</sup> ( Narayanaguda, Hyderabad )</b>
-		I was born to Krishna and Ratnaveni
-		</p>
+		<p><strong>Born: April 17<sup>th</sup> ( Narayanaguda, Hyderabad )</strong><br/>I was born to Krishna and Ratnaveni and being the only daughter of their three children, I was always given special attention. I am thankful to both my mom and dad for all their love, support and guidance throughout my life. They have been the best parents a girl could wish for in her life. I also have two lovely brothers(Ravi and Uday) who have stood by my side whenever I needed them. I really miss those days when we used to spend most of the time at home playing together, when my parents were off to work. And I really want to thank my brother Ravi for building this site especially for me.</p>
+		<p>I have stayed at my hometown until my undergraduate studies and then moved to the USA for my graduate studies. Thanks Dad, for sending me to study abroad, studying and working in United States gave me a new outlook about life and being independent.</p>
+		<p>I would like to thank my in-laws for welcoming into their family with open arms. I am really excited to be part of their family.</p>
+		<p>Finally, I would like to thank everybody for taking time visit our site, and all those special people who helped me with the wedding.</p>
 	</div>
 </div>
 <hr/>
