--- a/src/main/webapp/views/groom.html
+++ b/src/main/webapp/views/groom.html
@@ -8,43 +8,9 @@
 		      </slide>
 		    </carousel>
 	    </div>
-		<p>
-		<b>Born: July 15 1983 ( Agraharam Village, Nellore DT)</b>
-
-I was born to Namburu Mastanaiah and Suguna. I was only child for them until i was 9 years old. Being only child for those many years, i was  most pampered and got unprecedented love from parents/Grand Parents/Relatives. Mom and Dad thanks a lot!.. When I was 9 i was blessed with a lovely brother.
-
-</p><p><b>My Teens and Early Adulthood:</b>
-
-With out any doubt, i was the most notorious, mischievous kid in my class. Did every possible act that a teenager can think of!. My school buddies can witness this. Math, Science and Social was my favorite subjects in school, often did good in exams so I do earn little sympathy from teachers and fellow classmates. Being decent in Sports, Studies never had problem making friends. I did better in school as i move to towards college. May be started started taking education seriously as i move close to my 20's.
-
-</p><p><b>My Engineering/College In India:</b>
-
-I did Bachelors in Mechanical Engineering from University of Madras. Nellore where I am from being close to Chennai, TN, we decided to attend engineering in Chennai from University of Madras. Chennai i made pretty good  friends, Even today some times i Cherish listing to Tamil songs. College was fun, busy. Every day Evenings are filled with CRICKET...CRICKET...followed by heavy dinner!.. I say heavy its truly heavy!.... I am not listing any friends names because, i had quiet a few of good friends. 
-
-Being a Mechanical Engineer, I had natural inclination towards sport cars and high speed jet plans. Always wanted to find out/know whats makes them so special.  Also when an curvilinear object ( Cricket/Tennis Ball to Frisbee) is thrown with certain speed its swings in the ambient air. These are questions that bothered me a lot. I truly wanted to understand the physics of flight. These are times when i slowly started to think attending schools in industrially developed nations like U.S, Germany, U.K and Japan. Out of all practical reasons i felt U.S of America was the best option. 
-
-Being not so good in English/ in General schooling i always doubted my abilities and often become nervous. Again I had some very good friends who helped me overcome these concerns. Finally i prepared and cleared the requirements that offered me admission in Colleges in America. 
-              
-</p><p><b>My Graduate Studies, Gods Own Land (Alaska) and Years of Professional Engineering:</b>
-
-I was the most excited when i landed in Fairbanks, Alaska. Happy to see myself attending college in America. In fact I was so happy that I started partying everyday, it took one of my professor to warn me about my grades and consequences of bad grades. That is when i realized the seriousness of graduate studies and school. I finished my course work with decent grades. Good thing happened to me in Graduate School was to Work For/Under Dr. Debendra Das, Truly a good mentor/teacher.He is the one who answered most of my questions regarding physics that govern physics of flight. Dr. Das thanks a lot!... 
-
-Alaska, Land was pristine, pure, scenic and gifted with natural resources changed me as person and my thought process. I should thank ALASKA for that!..
-
-Finishing Graduate school with decent research abilities, fetched  me a job in ESAB welding and cutting products in Florence, SC. ESAB has long history of designing and developing metal cutting products and they wanted to look at one of their most critical product with my academic abilities and  wanted a possible redesign of the product. As the product was engineered for years by some the very best in the ART, made me nervous "HOW CAN I DO BETTER THAN THEM".. It took lot of effort from my side understand the product, system and finally able to suggest some better designs. Again i had good mentors and friends helped me focus in my career/ in general life.
-
-After 3 years working at ESAB i was offered a job in KALIBURN ,in Charleston, SC as their senior design engineer. City of Charleston is historic and beautiful made me move from Florence to Charleston. Also at KALIBURN my product designs have seen the light, manufactured in house and sold across the globe. I got few PATENTS for the designs with which i was truly recognized among peer researchers, engineers. Now i truly believed i am ready for next step in my life i.e MARRIAGE, i might be little late according to INDIAN standards nevertheless it was very satisfying journey!.... 
-
-</p><p><b>UDAYA BHANU and HER FAMILY:</b>
-
-My Parents are always tensed about my marriage even tough i was doing well personally and professionally. From my child hood i was mentally prepared that my Marriage will be Strictly Arranged, As i know i have two friends as  LOVING PARENTS.  My Parents got me in touch with Bhanu and their parents, that's where its all started. 
-
-I liked Bhanu's practical outlook in life along with caring, affectionate and discipline. Also i truly liked Bhanu's loving Family. I always believed One do not get Married to single person, he or she gets married to others FAMILY. 
-
-Ravi, Bhanu's brother is nice, intelligent with whom i can have/had some intellectual discussions!...  Yet to meet/talk to her KID brother UDAY.     
-
-
-___________I believe  i covered most of the journey so far!....</p>
+		<p><strong>Born: July 15 1983 (Agraharam Village, Nellore DT)</strong><br/>I was born to Namburu Mastanaiah and Suguna. I was only child for them until I was 9 years old. Being the only child for those many years, I was most pampered and got unprecedented love from my parents/Grand Parents/Relatives. I thank both of them in everything. When I was 9 I was blessed with a lovely brother.</p>
+		<p><strong>My Graduate Studies, Gods Own Land (Alaska) and Years of Professional Engineering:</strong><br/>I was the most excited when i landed in Fairbanks, Alaska. Finishing Graduate school with decent research abilities, fetched me a job in ESAB welding and cutting products in Florence, SC. ESAB has long history of designing and developing metal cutting products. After 3 years working at ESAB i was offered a job in KALIBURN ,in Charleston, SC as their senior design engineer. </p>
+		<p><strong>About Bride and Family:</strong><br/>My Parents are always tensed about my marriage even tough I was doing well personally and professionally. From my child hood I was mentally prepared that my marriage will be strictly arranged, As I know I have two friends as LOVING PARENTS. My Parents got me in touch with Bhanu and their parents, that's where its all started. I liked Bhanu's practical outlook in life along with caring, affectionate and discipline. Also I truly liked Bhanu's loving Family. </p>
 	</div>
 </div>
 <hr/>
