--- a/src/main/webapp/views/live.html
+++ b/src/main/webapp/views/live.html
@@ -2,5 +2,5 @@
 <div class="center-block live-video-container">
 	<p>Goes live on March 24<sup>th</sup> at 2:00am IST.</p>
 	<iframe src="//www.ustream.tv/embed/4360170?wmode=direct" style="border: 0 none transparent;" frameborder="no"></iframe><br /><a href="http://www.ustream.tv/" style="padding: 2px 0px 4px; background: #ffffff; display: block; color: #000000; font-weight: normal; font-size: 10px; text-decoration: underline; text-align: center;" target="_blank">Live streaming video by Ustream</a>
-	<p>Can't view the video, check directly on <a href="http://www.ustream.tv/channel/tvrkiran" target="_blank">UStream Channel</a></p>
+	<p>Can't view the video, check directly on <a href="http://www.ustream.tv/channel/tvrkiran" target="_blank">Ustream Channel</a></p>
 </div>
