--- a/src/main/webapp/views/home.html
+++ b/src/main/webapp/views/home.html
@@ -1,3 +1,6 @@
+<div class="img-container">
+	<img class="img-responsive" src="resources/images/img_main.jpg">
+</div>
 <p>Dearest Family & Friends,</p>
 <p>Welcome to our website, and thank you for taking the time to visit! Here you can find everything you'll need to know about our upcoming special day. We are trying to capture our best memories, please take a moment to sign our <a ui-sref="guestbook.list">guest book</a>.</p>
 <p>With love,</p>
